# NeuralC

./: .gitignore  CMakeLists.txt  run.sh
src/: data.h  filter.h  image.h  layer.h  main.c  utils.h
